# kitty-api

./: CHANGELOG.md  Dockerfile  README.md  create-zip.sh  docker-compose.yml  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yml  main.yml
api/: __init__.py  chatbot.py  main.py
api/ml_models/: chatbot_model.h5  classes.pkl  intents.json  words.pkl
tests/: test_app.py
